Attempt for moving arm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,9 @@ INCLUDE_DIRECTORIES( ${DART_INCLUDE_DIRS} )
 
 # Search all header and source files
 set ( rip_srcs  tabRipPlannerApp.cpp tabRipPlanner.cpp RRT.cpp PathPlanner.cpp
-  JTQuickFind.cpp newtonianPhysics.cpp Thrower.cpp)
-set ( rip_hdrs  tabRipPlanner.h RRT.h PathPlanner.h JTQuickFind.h
-  newtonianPhysics.h Thrower.h)
+  JointMover.cpp newtonianPhysics.cpp Thrower.cpp )
+set ( rip_hdrs  tabRipPlanner.h RRT.h PathPlanner.h JointMover.h
+  newtonianPhysics.h Thrower.h )
 set ( kdtree_srcs kdtree/kdtree.c )
 set ( kdtree_hdrs kdtree/kdtree.h )
 
